--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-sliding-pane": "^3.1.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
