--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "everprettybeautystudio",
+  "name": "scroll",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +7,8 @@
     "react": "^16.8.6",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-scrollchor": "^6.0.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
