--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scroll",
+  "name": "EverPrettyBeautyStudio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-scrollchor": "^6.0.0",
+    "react-scroll-parallax": "^2.1.2",
     "styled-components": "^4.3.2"
   },
   "scripts": {
