--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.2.0",
+    "@react-google-maps/api": "^1.7.6",
     "react": "^16.8.6",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-scrollchor": "^6.0.0",
     "react-scroll-parallax": "^2.1.2",
+    "react-scrollchor": "^6.0.0",
+    "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
