--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.5.1",
     "@react-google-maps/api": "^1.7.6",
+    "expo-constants": "^8.0.0",
     "mapbox-gl": "^1.5.0",
     "mdbreact": "^4.22.0",
     "origen-react-instagram-feed": "0.0.3",
@@ -15,17 +16,22 @@
     "react-coverflow": "^0.2.20",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
+    "react-fittext": "^1.0.0",
     "react-id-swiper": "^2.4.0",
     "react-image-gallery": "^0.9.1",
     "react-mapbox-gl": "^4.7.3",
     "react-multi-carousel": "^2.4.0",
+    "react-native": "^0.61.5",
     "react-native-snap-carousel": "^3.8.4",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.0",
     "react-scroll-parallax": "^2.1.2",
+    "react-scroll-text": "^1.0.1",
+    "react-scrollbar": "^0.5.6",
     "react-scrollchor": "^6.0.0",
     "react-simple-image-slider": "^1.0.2",
     "react-slick": "^0.25.2",
     "react-swipeable-views": "^0.13.3",
+    "react-window": "^1.8.5",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.3.2",
     "swiper": "^5.2.0"
